--- a/src/app/pages/dashboard/article/article.component.html
+++ b/src/app/pages/dashboard/article/article.component.html
@@ -32,7 +32,7 @@
         <div style="overflow: hidden">
           <div class="row mt-2">
             <div class="col-md-6" *ngFor="let show of showImage; let index = index">
-              <input [id]="'file' + index" class="file-upload-btn" type="file" name="file" accept='image/*' (change)="previewImage($event.target, index)"/>
+              <input [id]="'file' + index" class="file-input-btn" type="file" name="file" accept='image/*' (change)="previewImage($event.target, index)"/>
               <label [for]="'file' + index" class="label-btn">Choose a file</label>
               <div *ngIf="show" class="text-center">
                 <img [src]="imgURL[index]" height="360" *ngIf="imgURL[index]">
