--- a/src/styles.css
+++ b/src/styles.css
@@ -6509,7 +6509,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: #0154f7;
   padding-right: 6px
 }
-
+.mat-form-field-label:not(.mat-focused) {
+  color: #263238;
+  font-weight: 500;
+}
+/*.mat-input-invalid .mat-input-placeholder {*/
+/*  color: red!important;*/
+/*}*/
 @media(max-width:767px) {
   .blog-standard-area .blog-standard .blog-item .blog-content .item .blog-social {
     margin-top: 15px
@@ -8020,4 +8026,46 @@ button:active, button:focus {outline:0;border:none;-moz-outline-style:none;}
 }
 .about-tab .mat-tab-body-wrapper {
   height: 360px;
+}
+.label-btn {
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  outline: 0;
+  border: none;
+  -webkit-tap-highlight-color: transparent;
+  display: inline-block;
+  white-space: nowrap;
+  text-decoration: none;
+  vertical-align: baseline;
+  text-align: center;
+  min-width: 64px;
+  line-height: 36px;
+  padding: 0 16px;
+  border-radius: 4px;
+  overflow: visible;
+  transform: translate3d(0,0,0);
+  transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
+  background: #607d8b;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  width: 100%;
+  margin-bottom: 16px;
+}
+.label-btn:hover {
+  background: #78909c;
+}
+.file-input-btn {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
