business excel complete and scout initial design

--- a/src/app/includes/dashboard/top-navbar/top-navbar.component.css
+++ b/src/app/includes/dashboard/top-navbar/top-navbar.component.css
@@ -148,8 +148,7 @@ mat-sidenav:not(.mat-drawer-opened) .menu-item-title {
 mat-card-actions {
   margin-top: 8px
 }
-.search-btn mat-icon {
-  vertical-align: initial!important;
+.top-search-btn {
 }
 @media (max-width: 600px) {
   mat-sidenav-container {
