--- a/src/app/includes/front/footer/footer.component.html
+++ b/src/app/includes/front/footer/footer.component.html
@@ -5,7 +5,7 @@
         <div class="footer-logo text-center pb-45">
           <a href="#">
             <img src="assets/images/auth_logo.png" style="width: 100px;margin-top: -30px;" alt="">
-            <span class="text-white" style="font-size: 60px;">&nbsp;M&nbsp;S&nbsp;E</span>
+            <span class="text-white" style="font-size: 60px;">&nbsp;M&nbsp;I&nbsp;X</span>
           </a>
         </div>
       </div>
