--- a/src/app/includes/front/header/header.component.html
+++ b/src/app/includes/front/header/header.component.html
@@ -44,7 +44,7 @@
               </button>
               <a class="navbar-brand float-left d-flex" routerLink="/">
                 <img src="assets/images/auth_logo.png" style="width: 64px; margin-top: -8px">
-                <div class="logo-text ml-2">M&nbsp;S&nbsp;E</div>
+                <div class="logo-text ml-2">M&nbsp;I&nbsp;X</div>
               </a>
               <mat-menu #menu="matMenu" xPosition="before">
                 <button mat-menu-item routerLink="/" routerLinkActive="active">Home</button>
