--- a/src/app/includes/dashboard/top-navbar/top-navbar.component.html
+++ b/src/app/includes/dashboard/top-navbar/top-navbar.component.html
@@ -6,12 +6,12 @@
   <div class="logo mr-2 hidden-xs">
     <img src="assets/images/auth_logo.png" alt="logo">
   </div>
-  <div class="logo">MSE</div>
+  <div class="logo">MIX</div>
   <div class="search-bar-wrapper hidden-xs">
-    <button mat-icon-button class="search-btn">
-      <mat-icon>search</mat-icon>
+    <button mat-icon-button class="position-absolute">
+      <mat-icon class="top-search-btn">search</mat-icon>
     </button>
-    <label>
+    <label class="ml-40">
       <input type="text" matInput [formControl]="searchBar" [matAutocomplete]="auto" placeholder="Search here">
     </label>
   </div>
