--- a/src/app/pages/dashboard/newsfeed/newsfeed.component.css
+++ b/src/app/pages/dashboard/newsfeed/newsfeed.component.css
@@ -6,7 +6,7 @@
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   line-height: 18px;
-  letter-spacing: -0.04px;
+  letter-spacing: -0.04px
 }
 ul {
   list-style: none;
