--- a/src/app/pages/dashboard/business/business.component.html
+++ b/src/app/pages/dashboard/business/business.component.html
@@ -74,7 +74,7 @@
           <label for="answer">Upload your answers</label>
         </button>
       </mat-menu>
-      <mat-card-header>Question {{currentStep}}</mat-card-header>
+      <mat-card-header>Question {{ currentStep + 1 }}</mat-card-header>
       <mat-divider></mat-divider>
       <mat-card-content>
         <div class="detail mt-3">
@@ -1555,4 +1555,3 @@
     </mat-expansion-panel>
   </div>
 </div>
-
